# MiGate

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
architecture/: architecture_test.go
cmd/migate/: main.go  main_test.go
docs/: api.md  deployment.md
frontend/: index.html  package-lock.json  vite.config.js
migate/: client_manager.py  config.py  main.py  setup_service_start.py
packaging/: install.sh  installer_test.go  migate.service  uninstall.sh
scripts/: install.sh
tests/: test_backup.py  test_cli.py  test_client_api.py  test_client_manager.py  test_client_traffic.py  test_config.py  test_egress_backend_config.py  test_egress_lifecycle.py  test_egress_status.py  test_import.py  test_inbound_repository.py  test_inbound_to_xray.py  test_install_script.py  test_leak_guard.py  test_node_repository.py  test_notifications.py  test_openvpn_config_render.py  test_openvpn_config_save.py  test_openvpn_process.py  test_openvpn_process_plan.py  test_openvpn_process_restart.py  test_openvpn_process_runner.py  test_openvpn_process_stop.py  test_openvpn_tunnel_adapter.py  test_packaging_dependencies.py  test_panel.py  test_performance_optimizations.py  test_policy_routing_apply.py  test_policy_routing_cleanup.py  test_policy_routing_cleanup_runner.py  test_policy_routing_plan.py  test_proxy_run.py  test_proxy_runtime.py  test_proxy_service_cli.py  test_proxy_service_start.py  test_remote_acceptance.py  test_remote_cli_defaults.py  test_remote_doctor.py  test_remote_egress_plan.py  test_remote_egress_runner.py  (+48 more)
(+146 files in other folders)
