[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migate"
version = "0.1.0"
description = "MiGate: integrated Xray + VPNGate + OpenVPN smart egress gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MiGate Contributors" }
]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "psutil>=5.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]

[project.scripts]
migate = "migate.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
